force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_ROTH_Heading__c.field-meta.xml
<CustomField>
    <fullName>EPS_ROTH_Heading__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On your current Payroll Detail File, what is the header name of the ROTH* source? *Roth = Employee Roth payroll contribution deductions</inlineHelpText>
    <label>EPS ROTH Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>