force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Safe_Harbor_Heading__c.field-meta.xml
<CustomField>
    <fullName>EPS_Safe_Harbor_Heading__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On your current Payroll Detail File, what is the header name of the SAFE* source? *Safe = Employer Company Safe Harbor (i.e. Employer 3% Non-elective) payroll contribution deductions</inlineHelpText>
    <label>EPS Safe Harbor Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>