force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Salary_Header__c.field-meta.xml
<CustomField>
    <fullName>EPS_Salary_Header__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On your current Payroll Detail File, what is the header name of the SALARY* source? *Salary = Per pay periods total gross compensation</inlineHelpText>
    <label>EPS Salary Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>