force-app/main/default/objects/simplesurvey__Survey__c/fields/EPS_Service_Hour_Heading__c.field-meta.xml
<CustomField>
    <fullName>EPS_Service_Hour_Heading__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>On your current Payroll Detail File, what is the header name of the SERVICE_HOURS* source? *Service_Hours = Per pay periods total hours worked</inlineHelpText>
    <label>EPS Service Hour Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>