force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_2nd_payroll_next_check_date__c.field-meta.xml
<CustomField>
    <fullName>EPSO_2nd_payroll_next_check_date__c</fullName>
    <inlineHelpText>For the 2nd payroll schedule, what is the next pay date - please provide check date</inlineHelpText>
    <label>2nd payroll next check date</label>
    <type>Date</type>
</CustomField>