force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_2nd_Payroll_Schedule__c.field-meta.xml
<CustomField>
    <fullName>EPSO_2nd_Payroll_Schedule__c</fullName>
    <inlineHelpText>Do you have a second payroll schedule/frequency? Example: owners paid monthly and employees paid weekly.</inlineHelpText>
    <label>2nd Payroll Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly (off cycle)</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>