force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_3rd_payroll_next_check_date__c.field-meta.xml
<CustomField>
    <fullName>EPSO_3rd_payroll_next_check_date__c</fullName>
    <inlineHelpText>For the 3rd payroll schedule, what is the next pay date - please provide check date</inlineHelpText>
    <label>3rd payroll next check date</label>
    <type>Date</type>
</CustomField>