force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_3rd_payroll_schedule__c.field-meta.xml
<CustomField>
    <fullName>EPSO_3rd_payroll_schedule__c</fullName>
    <inlineHelpText>Do you have a third payroll schedule/frequency? Example: owners paid monthly, employees paid weekly, sales paid quarterly.</inlineHelpText>
    <label>3rd payroll schedule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly</fullName>
            </value>
            <value>
                <fullName>Semi-monthly (off cycle)</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>