force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Discretionary_funding_frequency__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Discretionary_funding_frequency__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What is the frequency of funding employer discretionary matching contributions?</inlineHelpText>
    <label>Discretionary funding frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Payroll</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>ER Match Contributions not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>