force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Discretionary_Match_deductions__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Discretionary_Match_deductions__c</fullName>
    <inlineHelpText>How do Employer Discretionary Match Contributions appear on your payroll report? Example 401(k) Match Contributions or UBQT Match</inlineHelpText>
    <label>Discretionary Match deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>