force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Employee_detail_report__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Employee_detail_report__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What is the name of your employee details report (includes: SSN, Name, dates of birth, hire, termination, email address, phone number, etc.)</inlineHelpText>
    <label>Employee detail report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>