force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Employee_Hours__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Employee_Hours__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How do employee hours appear on your payroll report? If you have multiple fields that need to be added together, please include them all.</inlineHelpText>
    <label>Employee Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>