force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Field_naming_convention_integrity__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Field_naming_convention_integrity__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>I understand for integration to work properly, all of Ubiquity&apos;s required data fields must be entered into my payroll system. I agree to use the deduction names/fields above when processing payroll and understand we will only collect this data. If I deviate from my payroll schedule or deduction codes above, I will contact my Payroll Koncierge before my payroll is processed.</inlineHelpText>
    <label>Field naming convention integrity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>