force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Gross_Earnings__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Gross_Earnings__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How do employee gross earnings appear on your payroll report? If you have multiple fields, please include all.</inlineHelpText>
    <label>Gross Earnings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>