force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Loan_deductions__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Loan_deductions__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How do Employee Loan deductions appear on your payroll report? Example 401(k) loan or loan</inlineHelpText>
    <label>Loan deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>