force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Next_payroll_check_date__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Next_payroll_check_date__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What day are your employees paid next? Please provide the check date.</inlineHelpText>
    <label>Next payroll check date</label>
    <type>Date</type>
</CustomField>