force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_OffCycle_payroll__c.field-meta.xml
<CustomField>
    <fullName>EPSO_OffCycle_payroll__c</fullName>
    <inlineHelpText>Do you run any ‘off-cycle’ payrolls? Off-cycle Payrolls are defined as &quot;bonus, commission, or variable pay that is not included with the employees regular payroll. In addition, off-cycle payroll is also if you pay or correct employee&apos;s payroll and they will receive a payroll that is separate from their regularly scheduled check.</inlineHelpText>
    <label>Off-Cycle payroll</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>