force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_OffCycle_payroll_notification__c.field-meta.xml
<CustomField>
    <fullName>EPSO_OffCycle_payroll_notification__c</fullName>
    <inlineHelpText>Do you agree to contact us when you process off-cycle payrolls? We will need to know if the payroll is processed so we can collect the data. Choosing no may decline your integration set up.</inlineHelpText>
    <label>Off-Cycle payroll notification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>