force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Payroll_report_name__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Payroll_report_name__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What is the name of your payroll report from your payroll system?</inlineHelpText>
    <label>Payroll report name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>