force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Pretax_catch_up_deductions__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Pretax_catch_up_deductions__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How do Pretax Catch Up Employee deductions appear on your payroll report? Example 401(k) catch up or UBQT Pretax - catch up</inlineHelpText>
    <label>Pretax catch up deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>