force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Pretax_deductions__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Pretax_deductions__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How do Pretax Employee deductions appear on your payroll report? Example 401(k) Contributions or UBQT Pretax</inlineHelpText>
    <label>Pretax deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>