force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Profit_Sharing_deductions__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Profit_Sharing_deductions__c</fullName>
    <inlineHelpText>How do Employer Profit Sharing deductions appear on your payroll report? Example 401(k) Profit sharing</inlineHelpText>
    <label>Profit Sharing deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>