force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Profit_Sharing_in_payroll__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Profit_Sharing_in_payroll__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Does your payroll provider allow you to add Profit Sharing Contributions as an employer contribution?</inlineHelpText>
    <label>Profit Sharing in payroll</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>