force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_ROTH_deductions__c.field-meta.xml
<CustomField>
    <fullName>EPSO_ROTH_deductions__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How do Roth Employee deductions appear on your payroll report? Example 401(k) Contributions or UBQT Pretax</inlineHelpText>
    <label>ROTH deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>