force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Safe_Harbor_deductions__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Safe_Harbor_deductions__c</fullName>
    <inlineHelpText>How do Employer Safe Harbor contributions,  if applicable, appear on your payroll report? Example 401(k) match, 401(k) SH, 401k Non-elective</inlineHelpText>
    <label>Safe Harbor deductions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>