force-app/main/default/objects/simplesurvey__Survey__c/fields/EPSO_Safe_Harbor_funding_frequency__c.field-meta.xml
<CustomField>
    <fullName>EPSO_Safe_Harbor_funding_frequency__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>What is the frequency of funding safe harbor (non-elective or matching) contributions?</inlineHelpText>
    <label>Safe Harbor funding frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Payroll</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Safe Harbor Contributions not allowed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>