force-app/main/default/objects/simplesurvey__Survey__c/fields/Fee_Structures_Preference__c.field-meta.xml
<CustomField>
    <fullName>Fee_Structures_Preference__c</fullName>
    <label>Fee Structures Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strongly prefer</fullName>
            </value>
            <value>
                <fullName>Prefer</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Dislike</fullName>
            </value>
            <value>
                <fullName>Strongly dislike</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>