force-app/main/default/objects/simplesurvey__Survey__c/fields/FindEmployees__c.field-meta.xml
<CustomField>
    <fullName>FindEmployees__c</fullName>
    <inlineHelpText>Would you like us to locate your terminated employee(s)?</inlineHelpText>
    <label>FindEmployeesCertifiedNotices</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I want Ubiquity to locate my ex-employee(s) for me ($25 look up fee per employee)</fullName>
            </value>
            <value>
                <fullName>No, I (sponsor/trustee) will locate their last known address and update the information online if applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>