force-app/main/default/objects/simplesurvey__Survey__c/fields/ForceOutThresholdChange__c.field-meta.xml
<CustomField>
    <fullName>ForceOutThresholdChange__c</fullName>
    <inlineHelpText>Would you like to increase your plan’s forceout threshold from $1,000 to $5,000?  See section 35. D. in your adoption agreement to confirm current force-out threshold.</inlineHelpText>
    <label>ForceOutThresholdChange</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No: Our plans threshold is already $5,000 OR we would like to keep it at $1,000</fullName>
            </value>
            <value>
                <fullName>Yes: Amend the plan and increase our force-out threshold to $5,000 ($195 Plan Amendment Fee)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>