force-app/main/default/objects/simplesurvey__Survey__c/fields/FreeFormFeedback__c.field-meta.xml
<CustomField>
    <fullName>FreeFormFeedback__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>If there was one thing we could do to improve your overall experience with Ubiquity, what would it be?</inlineHelpText>
    <label>FreeFormFeedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>