force-app/main/default/objects/simplesurvey__Survey__c/fields/Government_Agency__c.field-meta.xml
<CustomField>
    <fullName>Government_Agency__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Is your firm a government agency?</inlineHelpText>
    <label>Government Agency?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>