force-app/main/default/objects/simplesurvey__Survey__c/fields/Helpful_Chat__c.field-meta.xml
<CustomField>
    <fullName>Helpful_Chat__c</fullName>
    <label>Helpful Chat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>