force-app/main/default/objects/simplesurvey__Survey__c/fields/How_to_Improve_Chat__c.field-meta.xml
<CustomField>
    <fullName>How_to_Improve_Chat__c</fullName>
    <label>How to Improve Chat</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>