force-app/main/default/objects/simplesurvey__Survey__c/fields/How_to_improve_experience__c.field-meta.xml
<CustomField>
    <fullName>How_to_improve_experience__c</fullName>
    <inlineHelpText>How can we enhance your experience with Ubiquity?</inlineHelpText>
    <label>How to improve experience</label>
    <type>TextArea</type>
</CustomField>