force-app/main/default/objects/simplesurvey__Survey__c/fields/How_to_Improve_to_5_Stars__c.field-meta.xml
<CustomField>
    <fullName>How_to_Improve_to_5_Stars__c</fullName>
    <description>For Verbal CSAT scores of 1, 2, or 3, please ask how we can improve and indicate closes/most applicable answer here</description>
    <inlineHelpText>For Verbal CSAT scores of 1, 2, or 3, please ask how we can improve and indicate closes/most applicable answer here</inlineHelpText>
    <label>How to Improve to 5 Stars?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>More info on 401k rules, compliance</fullName>
            </value>
            <value>
                <fullName>More info on how to use the platform</fullName>
            </value>
            <value>
                <fullName>Faster response time to initial inquiry</fullName>
            </value>
            <value>
                <fullName>Faster issue resolution time</fullName>
            </value>
            <value>
                <fullName>Better product functionality/features</fullName>
            </value>
            <value>
                <fullName>Better reporting</fullName>
            </value>
            <value>
                <fullName>More guidance on my plan</fullName>
            </value>
            <value>
                <fullName>Lower fees</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>