force-app/main/default/objects/simplesurvey__Survey__c/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Implementation associated with the Survey</description>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>