force-app/main/default/objects/simplesurvey__Survey__c/fields/Internal_Payroll_Contact__c.field-meta.xml
<CustomField>
    <fullName>Internal_Payroll_Contact__c</fullName>
    <inlineHelpText>List name(s) and phone number(s) of payroll contact(s) at your company</inlineHelpText>
    <label>Internal Payroll Contact</label>
    <type>TextArea</type>
</CustomField>