force-app/main/default/objects/simplesurvey__Survey__c/fields/Knowledge_Rating__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Rating__c</fullName>
    <label>Knowledge Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>