force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Bank_outside_US__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Bank_outside_US__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Is the bank you&apos;re using to fund contributions based outside the U.S</inlineHelpText>
    <label>Kotapay - Bank outside US?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>