force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_CBD_Hemp_THC__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_CBD_Hemp_THC__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Is your company involved in any CBD, hemp, or marijuana related activity?</inlineHelpText>
    <label>Kotapay - CBD, Hemp, THC?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>