force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Company_Name__c</fullName>
    <inlineHelpText>Please enter your company&apos;s legal name as registered with the IRS</inlineHelpText>
    <label>Kotapay - Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>