force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Company_name_at_bank__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Company_name_at_bank__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Your company name as it appears on your corporate bank account used to fund employee contributions made to your plan</inlineHelpText>
    <label>Kotapay - Company name at bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>