force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_ControlAffiliated_Group__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_ControlAffiliated_Group__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Is your company part of a control/affiliated group?   (Group of related businesses that have common ownership OR two or more organizations that have a service relationship.)</inlineHelpText>
    <label>Kotapay - Control/Affiliated Group?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>