force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Describe_CBDHempTHC__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Describe_CBDHempTHC__c</fullName>
    <inlineHelpText>Describe involvement with CBD, Hemp, and/or THC</inlineHelpText>
    <label>Kotapay - Describe CBD,Hemp,THC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>