force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Funding_and_Payroll_info__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Funding_and_Payroll_info__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Confirm that the funding account number and payroll schedule listed on your Ubiquity account is correct</inlineHelpText>
    <label>Kotapay - Funding and Payroll info</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>