force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Last_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Last_Distribution_Date__c</fullName>
    <inlineHelpText>What was the most recent distribution date from that plan?</inlineHelpText>
    <label>Kotapay - Last Distribution Date</label>
    <type>Date</type>
</CustomField>