force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Other_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Other_Plan_Type__c</fullName>
    <inlineHelpText>What type of retirement plan is it?</inlineHelpText>
    <label>Kotapay - Other Plan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>