force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Other_Sponsored_Plan__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Other_Sponsored_Plan__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>If you&apos;re currently sponsoring another retirement plan, what type of plan is it?  N/A if not.</inlineHelpText>
    <label>Kotapay - Other Sponsored Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>