force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Owner_Names__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Owner_Names__c</fullName>
    <inlineHelpText>First and last names of all company owners</inlineHelpText>
    <label>Kotapay - Owner Names</label>
    <type>TextArea</type>
</CustomField>