force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Previous_plan_close_last_year__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Previous_plan_close_last_year__c</fullName>
    <inlineHelpText>Was that plan closed in the last 12 months?​</inlineHelpText>
    <label>Kotapay - Previous plan close last year?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>