force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Prior_Retirement_Plan__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Prior_Retirement_Plan__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Has your company sponsored a retirement plan before that is no longer open?</inlineHelpText>
    <label>Kotapay - Prior Retirement Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>