force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Products_Services_Offered__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Products_Services_Offered__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Provide general description of the products/services you offer</inlineHelpText>
    <label>Kotapay - Products Services Offered</label>
    <length>255</length>
    <type>Text</type>
</CustomField>