force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Sponsoring_Other_Plan__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Sponsoring_Other_Plan__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>Is your company sponsoring another retirement plan?</inlineHelpText>
    <label>Kotapay - Sponsoring Other Plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>