force-app/main/default/objects/simplesurvey__Survey__c/fields/Kotapay_Years_in_business__c.field-meta.xml
<CustomField>
    <fullName>Kotapay_Years_in_business__c</fullName>
    <inlineHelpText>Please enter the number of years your company has been in business</inlineHelpText>
    <label>Kotapay - Years in business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>