force-app/main/default/objects/simplesurvey__Survey__c/fields/Legal_Proceeding_Detail__c.field-meta.xml
<CustomField>
    <fullName>Legal_Proceeding_Detail__c</fullName>
    <inlineHelpText>Please provide nature of legal proceeding</inlineHelpText>
    <label>Legal Proceeding Detail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IRS/DOL Investigation</fullName>
            </value>
            <value>
                <fullName>Pending Litigation</fullName>
            </value>
            <value>
                <fullName>Bankruptcy Proceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>