force-app/main/default/objects/simplesurvey__Survey__c/fields/Less_than_1000_hrs_on_census__c.field-meta.xml
<CustomField>
    <fullName>Less_than_1000_hrs_on_census__c</fullName>
    <inlineHelpText>If you have part-time employees that work less than 1,000 hours on an annual basis, do you currently report them on your census?</inlineHelpText>
    <label>Less than 1000 hrs on census</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>