force-app/main/default/objects/simplesurvey__Survey__c/fields/Log_In_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Log_In_Frequency__c</fullName>
    <description>Question Created by the Survey Builder</description>
    <inlineHelpText>How often are you logging into your 401(k) account with Ubiquity?</inlineHelpText>
    <label>Log In Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Once a month</fullName>
            </value>
            <value>
                <fullName>Every 2-3 months</fullName>
            </value>
            <value>
                <fullName>Every 4-6 months</fullName>
            </value>
            <value>
                <fullName>Once or twice a year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>